fix: changed defaults to match previous function

--- a/Redlight.ini
+++ b/Redlight.ini
@@ -23,14 +23,14 @@ teksensor=true
 parasaur_ping=true
 
 ; Starvation: Your dino starved
-starvation=false
+starvation=true
 
 ; Demolition: Someone in your tribe demolished one of your structures
-demolition=false
+demolition=true
 
 ; Enemy Structure Destroyed: Someone in your tribe demolished an enemy structure
-enemy_structure_destroyed=false
+enemy_structure_destroyed=true
 
 ; Log Positioning: An unexpected colour appeared in logs, perhaps the logs arent 
 ; where the script expects them to be?
-log_positioning=false
+log_positioning=true
